// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic: <div v-t="'hello'"/> 1`] = `
"const { openBlock: _openBlock, createElementBlock: _createElementBlock } = Vue

return function render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock(\\"div\\", null, \\"こんにちは！\\"))
}"
`;

exports[`basic: <div v-t="'hello'"/> 2`] = `
Object {
  "cached": 0,
  "children": Array [
    Object {
      "children": Array [
        Object {
          "content": "こんにちは！",
          "type": 2,
        },
      ],
      "codegenNode": Object {
        "children": Object {
          "content": "こんにちは！",
          "type": 2,
        },
        "directives": undefined,
        "disableTracking": false,
        "dynamicProps": undefined,
        "isBlock": true,
        "isComponent": false,
        "loc": Object {
          "end": Object {
            "column": 21,
            "line": 1,
            "offset": 20,
          },
          "source": "<div v-t=\\"'hello'\\"/>",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "patchFlag": undefined,
        "props": undefined,
        "tag": "\\"div\\"",
        "type": 13,
      },
      "isSelfClosing": true,
      "loc": Object {
        "end": Object {
          "column": 21,
          "line": 1,
          "offset": 20,
        },
        "source": "<div v-t=\\"'hello'\\"/>",
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "ns": 0,
      "props": Array [
        Object {
          "arg": undefined,
          "exp": Object {
            "ast": Node {
              "comments": Array [],
              "end": 8,
              "errors": Array [],
              "extra": Object {
                "parenStart": 0,
                "parenthesized": true,
                "raw": "'hello'",
                "rawValue": "hello",
              },
              "loc": SourceLocation {
                "end": Position {
                  "column": 8,
                  "index": 8,
                  "line": 1,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 1,
                  "index": 1,
                  "line": 1,
                },
              },
              "start": 1,
              "type": "StringLiteral",
              "value": "hello",
            },
            "constType": 3,
            "content": "'hello'",
            "identifiers": Array [],
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 18,
                "line": 1,
                "offset": 17,
              },
              "source": "'hello'",
              "start": Object {
                "column": 11,
                "line": 1,
                "offset": 10,
              },
            },
            "type": 4,
          },
          "loc": Object {
            "end": Object {
              "column": 19,
              "line": 1,
              "offset": 18,
            },
            "source": "v-t=\\"'hello'\\"",
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "modifiers": Array [],
          "name": "t",
          "rawName": "v-t",
          "type": 7,
        },
      ],
      "tag": "div",
      "tagType": 0,
      "type": 1,
    },
  ],
  "codegenNode": Object {
    "children": Object {
      "content": "こんにちは！",
      "type": 2,
    },
    "directives": undefined,
    "disableTracking": false,
    "dynamicProps": undefined,
    "isBlock": true,
    "isComponent": false,
    "loc": Object {
      "end": Object {
        "column": 21,
        "line": 1,
        "offset": 20,
      },
      "source": "<div v-t=\\"'hello'\\"/>",
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "patchFlag": undefined,
    "props": undefined,
    "tag": "\\"div\\"",
    "type": 13,
  },
  "components": Array [],
  "directives": Array [],
  "filters": Array [],
  "helpers": Set {
    Symbol(openBlock),
    Symbol(createElementBlock),
  },
  "hoists": Array [],
  "imports": Array [],
  "loc": Object {
    "end": Object {
      "column": 21,
      "line": 1,
      "offset": 20,
    },
    "source": "<div v-t=\\"'hello'\\"/>",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "source": "<div v-t=\\"'hello'\\"/>",
  "temps": 0,
  "transformed": true,
  "type": 0,
}
`;

exports[`missing translation: <div v-t="'foo.bar'"/> 1`] = `
"const { openBlock: _openBlock, createElementBlock: _createElementBlock } = Vue

return function render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock(\\"div\\", null, \\"foo.bar\\"))
}"
`;

exports[`missing translation: <div v-t="'foo.bar'"/> 2`] = `
Object {
  "cached": 0,
  "children": Array [
    Object {
      "children": Array [
        Object {
          "content": "foo.bar",
          "type": 2,
        },
      ],
      "codegenNode": Object {
        "children": Object {
          "content": "foo.bar",
          "type": 2,
        },
        "directives": undefined,
        "disableTracking": false,
        "dynamicProps": undefined,
        "isBlock": true,
        "isComponent": false,
        "loc": Object {
          "end": Object {
            "column": 23,
            "line": 1,
            "offset": 22,
          },
          "source": "<div v-t=\\"'foo.bar'\\"/>",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "patchFlag": undefined,
        "props": undefined,
        "tag": "\\"div\\"",
        "type": 13,
      },
      "isSelfClosing": true,
      "loc": Object {
        "end": Object {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
        "source": "<div v-t=\\"'foo.bar'\\"/>",
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "ns": 0,
      "props": Array [
        Object {
          "arg": undefined,
          "exp": Object {
            "ast": Node {
              "comments": Array [],
              "end": 10,
              "errors": Array [],
              "extra": Object {
                "parenStart": 0,
                "parenthesized": true,
                "raw": "'foo.bar'",
                "rawValue": "foo.bar",
              },
              "loc": SourceLocation {
                "end": Position {
                  "column": 10,
                  "index": 10,
                  "line": 1,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 1,
                  "index": 1,
                  "line": 1,
                },
              },
              "start": 1,
              "type": "StringLiteral",
              "value": "foo.bar",
            },
            "constType": 3,
            "content": "'foo.bar'",
            "identifiers": Array [],
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 20,
                "line": 1,
                "offset": 19,
              },
              "source": "'foo.bar'",
              "start": Object {
                "column": 11,
                "line": 1,
                "offset": 10,
              },
            },
            "type": 4,
          },
          "loc": Object {
            "end": Object {
              "column": 21,
              "line": 1,
              "offset": 20,
            },
            "source": "v-t=\\"'foo.bar'\\"",
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "modifiers": Array [],
          "name": "t",
          "rawName": "v-t",
          "type": 7,
        },
      ],
      "tag": "div",
      "tagType": 0,
      "type": 1,
    },
  ],
  "codegenNode": Object {
    "children": Object {
      "content": "foo.bar",
      "type": 2,
    },
    "directives": undefined,
    "disableTracking": false,
    "dynamicProps": undefined,
    "isBlock": true,
    "isComponent": false,
    "loc": Object {
      "end": Object {
        "column": 23,
        "line": 1,
        "offset": 22,
      },
      "source": "<div v-t=\\"'foo.bar'\\"/>",
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "patchFlag": undefined,
    "props": undefined,
    "tag": "\\"div\\"",
    "type": 13,
  },
  "components": Array [],
  "directives": Array [],
  "filters": Array [],
  "helpers": Set {
    Symbol(openBlock),
    Symbol(createElementBlock),
  },
  "hoists": Array [],
  "imports": Array [],
  "loc": Object {
    "end": Object {
      "column": 23,
      "line": 1,
      "offset": 22,
    },
    "source": "<div v-t=\\"'foo.bar'\\"/>",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "source": "<div v-t=\\"'foo.bar'\\"/>",
  "temps": 0,
  "transformed": true,
  "type": 0,
}
`;

exports[`named: <div v-t="{ path: 'hello', locale: 'ja', args: { name: 'kazupon' } }"/> 1`] = `
"const { openBlock: _openBlock, createElementBlock: _createElementBlock } = Vue

return function render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock(\\"div\\", null, \\"こんにちは、kazupon！\\"))
}"
`;

exports[`named: <div v-t="{ path: 'hello', locale: 'ja', args: { name: 'kazupon' } }"/> 2`] = `
Object {
  "cached": 0,
  "children": Array [
    Object {
      "children": Array [
        Object {
          "content": "こんにちは、kazupon！",
          "type": 2,
        },
      ],
      "codegenNode": Object {
        "children": Object {
          "content": "こんにちは、kazupon！",
          "type": 2,
        },
        "directives": undefined,
        "disableTracking": false,
        "dynamicProps": undefined,
        "isBlock": true,
        "isComponent": false,
        "loc": Object {
          "end": Object {
            "column": 72,
            "line": 1,
            "offset": 71,
          },
          "source": "<div v-t=\\"{ path: 'hello', locale: 'ja', args: { name: 'kazupon' } }\\"/>",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "patchFlag": undefined,
        "props": undefined,
        "tag": "\\"div\\"",
        "type": 13,
      },
      "isSelfClosing": true,
      "loc": Object {
        "end": Object {
          "column": 72,
          "line": 1,
          "offset": 71,
        },
        "source": "<div v-t=\\"{ path: 'hello', locale: 'ja', args: { name: 'kazupon' } }\\"/>",
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "ns": 0,
      "props": Array [
        Object {
          "arg": undefined,
          "exp": Object {
            "ast": Node {
              "comments": Array [],
              "end": 59,
              "errors": Array [],
              "extra": Object {
                "parenStart": 0,
                "parenthesized": true,
              },
              "loc": SourceLocation {
                "end": Position {
                  "column": 59,
                  "index": 59,
                  "line": 1,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 1,
                  "index": 1,
                  "line": 1,
                },
              },
              "properties": Array [
                Node {
                  "computed": false,
                  "end": 16,
                  "key": Node {
                    "end": 7,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 7,
                        "index": 7,
                        "line": 1,
                      },
                      "filename": undefined,
                      "identifierName": "path",
                      "start": Position {
                        "column": 3,
                        "index": 3,
                        "line": 1,
                      },
                    },
                    "name": "path",
                    "start": 3,
                    "type": "Identifier",
                  },
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 16,
                      "index": 16,
                      "line": 1,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 3,
                      "index": 3,
                      "line": 1,
                    },
                  },
                  "method": false,
                  "shorthand": false,
                  "start": 3,
                  "type": "ObjectProperty",
                  "value": Node {
                    "end": 16,
                    "extra": Object {
                      "raw": "'hello'",
                      "rawValue": "hello",
                    },
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 16,
                        "index": 16,
                        "line": 1,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 9,
                        "index": 9,
                        "line": 1,
                      },
                    },
                    "start": 9,
                    "type": "StringLiteral",
                    "value": "hello",
                  },
                },
                Node {
                  "computed": false,
                  "end": 30,
                  "key": Node {
                    "end": 24,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 24,
                        "index": 24,
                        "line": 1,
                      },
                      "filename": undefined,
                      "identifierName": "locale",
                      "start": Position {
                        "column": 18,
                        "index": 18,
                        "line": 1,
                      },
                    },
                    "name": "locale",
                    "start": 18,
                    "type": "Identifier",
                  },
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 30,
                      "index": 30,
                      "line": 1,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 18,
                      "index": 18,
                      "line": 1,
                    },
                  },
                  "method": false,
                  "shorthand": false,
                  "start": 18,
                  "type": "ObjectProperty",
                  "value": Node {
                    "end": 30,
                    "extra": Object {
                      "raw": "'ja'",
                      "rawValue": "ja",
                    },
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 30,
                        "index": 30,
                        "line": 1,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 26,
                        "index": 26,
                        "line": 1,
                      },
                    },
                    "start": 26,
                    "type": "StringLiteral",
                    "value": "ja",
                  },
                },
                Node {
                  "computed": false,
                  "end": 57,
                  "key": Node {
                    "end": 36,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 36,
                        "index": 36,
                        "line": 1,
                      },
                      "filename": undefined,
                      "identifierName": "args",
                      "start": Position {
                        "column": 32,
                        "index": 32,
                        "line": 1,
                      },
                    },
                    "name": "args",
                    "start": 32,
                    "type": "Identifier",
                  },
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 57,
                      "index": 57,
                      "line": 1,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 32,
                      "index": 32,
                      "line": 1,
                    },
                  },
                  "method": false,
                  "shorthand": false,
                  "start": 32,
                  "type": "ObjectProperty",
                  "value": Node {
                    "end": 57,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 57,
                        "index": 57,
                        "line": 1,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 38,
                        "index": 38,
                        "line": 1,
                      },
                    },
                    "properties": Array [
                      Node {
                        "computed": false,
                        "end": 55,
                        "key": Node {
                          "end": 44,
                          "loc": SourceLocation {
                            "end": Position {
                              "column": 44,
                              "index": 44,
                              "line": 1,
                            },
                            "filename": undefined,
                            "identifierName": "name",
                            "start": Position {
                              "column": 40,
                              "index": 40,
                              "line": 1,
                            },
                          },
                          "name": "name",
                          "start": 40,
                          "type": "Identifier",
                        },
                        "loc": SourceLocation {
                          "end": Position {
                            "column": 55,
                            "index": 55,
                            "line": 1,
                          },
                          "filename": undefined,
                          "identifierName": undefined,
                          "start": Position {
                            "column": 40,
                            "index": 40,
                            "line": 1,
                          },
                        },
                        "method": false,
                        "shorthand": false,
                        "start": 40,
                        "type": "ObjectProperty",
                        "value": Node {
                          "end": 55,
                          "extra": Object {
                            "raw": "'kazupon'",
                            "rawValue": "kazupon",
                          },
                          "loc": SourceLocation {
                            "end": Position {
                              "column": 55,
                              "index": 55,
                              "line": 1,
                            },
                            "filename": undefined,
                            "identifierName": undefined,
                            "start": Position {
                              "column": 46,
                              "index": 46,
                              "line": 1,
                            },
                          },
                          "start": 46,
                          "type": "StringLiteral",
                          "value": "kazupon",
                        },
                      },
                    ],
                    "start": 38,
                    "type": "ObjectExpression",
                  },
                },
              ],
              "start": 1,
              "type": "ObjectExpression",
            },
            "constType": 3,
            "content": "{ path: 'hello', locale: 'ja', args: { name: 'kazupon' } }",
            "identifiers": Array [],
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 69,
                "line": 1,
                "offset": 68,
              },
              "source": "{ path: 'hello', locale: 'ja', args: { name: 'kazupon' } }",
              "start": Object {
                "column": 11,
                "line": 1,
                "offset": 10,
              },
            },
            "type": 4,
          },
          "loc": Object {
            "end": Object {
              "column": 70,
              "line": 1,
              "offset": 69,
            },
            "source": "v-t=\\"{ path: 'hello', locale: 'ja', args: { name: 'kazupon' } }\\"",
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "modifiers": Array [],
          "name": "t",
          "rawName": "v-t",
          "type": 7,
        },
      ],
      "tag": "div",
      "tagType": 0,
      "type": 1,
    },
  ],
  "codegenNode": Object {
    "children": Object {
      "content": "こんにちは、kazupon！",
      "type": 2,
    },
    "directives": undefined,
    "disableTracking": false,
    "dynamicProps": undefined,
    "isBlock": true,
    "isComponent": false,
    "loc": Object {
      "end": Object {
        "column": 72,
        "line": 1,
        "offset": 71,
      },
      "source": "<div v-t=\\"{ path: 'hello', locale: 'ja', args: { name: 'kazupon' } }\\"/>",
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "patchFlag": undefined,
    "props": undefined,
    "tag": "\\"div\\"",
    "type": 13,
  },
  "components": Array [],
  "directives": Array [],
  "filters": Array [],
  "helpers": Set {
    Symbol(openBlock),
    Symbol(createElementBlock),
  },
  "hoists": Array [],
  "imports": Array [],
  "loc": Object {
    "end": Object {
      "column": 72,
      "line": 1,
      "offset": 71,
    },
    "source": "<div v-t=\\"{ path: 'hello', locale: 'ja', args: { name: 'kazupon' } }\\"/>",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "source": "<div v-t=\\"{ path: 'hello', locale: 'ja', args: { name: 'kazupon' } }\\"/>",
  "temps": 0,
  "transformed": true,
  "type": 0,
}
`;

exports[`plural: <div v-t="{ path: 'banana', choice: 2 }"/> 1`] = `
"const { openBlock: _openBlock, createElementBlock: _createElementBlock } = Vue

return function render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock(\\"div\\", null, \\"2 bananas\\"))
}"
`;

exports[`plural: <div v-t="{ path: 'banana', choice: 2 }"/> 2`] = `
Object {
  "cached": 0,
  "children": Array [
    Object {
      "children": Array [
        Object {
          "content": "2 bananas",
          "type": 2,
        },
      ],
      "codegenNode": Object {
        "children": Object {
          "content": "2 bananas",
          "type": 2,
        },
        "directives": undefined,
        "disableTracking": false,
        "dynamicProps": undefined,
        "isBlock": true,
        "isComponent": false,
        "loc": Object {
          "end": Object {
            "column": 43,
            "line": 1,
            "offset": 42,
          },
          "source": "<div v-t=\\"{ path: 'banana', choice: 2 }\\"/>",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "patchFlag": undefined,
        "props": undefined,
        "tag": "\\"div\\"",
        "type": 13,
      },
      "isSelfClosing": true,
      "loc": Object {
        "end": Object {
          "column": 43,
          "line": 1,
          "offset": 42,
        },
        "source": "<div v-t=\\"{ path: 'banana', choice: 2 }\\"/>",
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "ns": 0,
      "props": Array [
        Object {
          "arg": undefined,
          "exp": Object {
            "ast": Node {
              "comments": Array [],
              "end": 30,
              "errors": Array [],
              "extra": Object {
                "parenStart": 0,
                "parenthesized": true,
              },
              "loc": SourceLocation {
                "end": Position {
                  "column": 30,
                  "index": 30,
                  "line": 1,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 1,
                  "index": 1,
                  "line": 1,
                },
              },
              "properties": Array [
                Node {
                  "computed": false,
                  "end": 17,
                  "key": Node {
                    "end": 7,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 7,
                        "index": 7,
                        "line": 1,
                      },
                      "filename": undefined,
                      "identifierName": "path",
                      "start": Position {
                        "column": 3,
                        "index": 3,
                        "line": 1,
                      },
                    },
                    "name": "path",
                    "start": 3,
                    "type": "Identifier",
                  },
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 17,
                      "index": 17,
                      "line": 1,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 3,
                      "index": 3,
                      "line": 1,
                    },
                  },
                  "method": false,
                  "shorthand": false,
                  "start": 3,
                  "type": "ObjectProperty",
                  "value": Node {
                    "end": 17,
                    "extra": Object {
                      "raw": "'banana'",
                      "rawValue": "banana",
                    },
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 17,
                        "index": 17,
                        "line": 1,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 9,
                        "index": 9,
                        "line": 1,
                      },
                    },
                    "start": 9,
                    "type": "StringLiteral",
                    "value": "banana",
                  },
                },
                Node {
                  "computed": false,
                  "end": 28,
                  "key": Node {
                    "end": 25,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 25,
                        "index": 25,
                        "line": 1,
                      },
                      "filename": undefined,
                      "identifierName": "choice",
                      "start": Position {
                        "column": 19,
                        "index": 19,
                        "line": 1,
                      },
                    },
                    "name": "choice",
                    "start": 19,
                    "type": "Identifier",
                  },
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 28,
                      "index": 28,
                      "line": 1,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 19,
                      "index": 19,
                      "line": 1,
                    },
                  },
                  "method": false,
                  "shorthand": false,
                  "start": 19,
                  "type": "ObjectProperty",
                  "value": Node {
                    "end": 28,
                    "extra": Object {
                      "raw": "2",
                      "rawValue": 2,
                    },
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 28,
                        "index": 28,
                        "line": 1,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 27,
                        "index": 27,
                        "line": 1,
                      },
                    },
                    "start": 27,
                    "type": "NumericLiteral",
                    "value": 2,
                  },
                },
              ],
              "start": 1,
              "type": "ObjectExpression",
            },
            "constType": 3,
            "content": "{ path: 'banana', choice: 2 }",
            "identifiers": Array [],
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 40,
                "line": 1,
                "offset": 39,
              },
              "source": "{ path: 'banana', choice: 2 }",
              "start": Object {
                "column": 11,
                "line": 1,
                "offset": 10,
              },
            },
            "type": 4,
          },
          "loc": Object {
            "end": Object {
              "column": 41,
              "line": 1,
              "offset": 40,
            },
            "source": "v-t=\\"{ path: 'banana', choice: 2 }\\"",
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "modifiers": Array [],
          "name": "t",
          "rawName": "v-t",
          "type": 7,
        },
      ],
      "tag": "div",
      "tagType": 0,
      "type": 1,
    },
  ],
  "codegenNode": Object {
    "children": Object {
      "content": "2 bananas",
      "type": 2,
    },
    "directives": undefined,
    "disableTracking": false,
    "dynamicProps": undefined,
    "isBlock": true,
    "isComponent": false,
    "loc": Object {
      "end": Object {
        "column": 43,
        "line": 1,
        "offset": 42,
      },
      "source": "<div v-t=\\"{ path: 'banana', choice: 2 }\\"/>",
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "patchFlag": undefined,
    "props": undefined,
    "tag": "\\"div\\"",
    "type": 13,
  },
  "components": Array [],
  "directives": Array [],
  "filters": Array [],
  "helpers": Set {
    Symbol(openBlock),
    Symbol(createElementBlock),
  },
  "hoists": Array [],
  "imports": Array [],
  "loc": Object {
    "end": Object {
      "column": 43,
      "line": 1,
      "offset": 42,
    },
    "source": "<div v-t=\\"{ path: 'banana', choice: 2 }\\"/>",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "source": "<div v-t=\\"{ path: 'banana', choice: 2 }\\"/>",
  "temps": 0,
  "transformed": true,
  "type": 0,
}
`;
